added books in static array to page using forEach

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>Library App</title>
 </head>
 <body>
-  <h1>Jello</h1>
-
+  <h1>Library</h1>
+  <div class="library">
+    <ul class="books">
+      
+    </ul>
+  </div>
 </body>
 <script src="app.js"></script>
 </html>
