--- a/index.html
+++ b/index.html
@@ -9,11 +9,27 @@
 </head>
 <body>
   <h1>Library</h1>
-  <div class="library">
-    <ul class="books">
-      
-    </ul>
+  <div class="books">
   </div>
+  <form action="" class="form">
+    <div>
+      <label for="title">Title:</label>
+      <input type="text">
+    </div>
+    <div>
+      <label for="author">Author:</label>
+      <input type="text">
+    </div>
+    <div>
+      <label for="pages">Pages:</label>
+      <input type="text">
+    </div>
+    <div>
+      <label for="read">Read/Not Read:</label>
+      <input type="text">
+    </div>
+  </form>
+  <button class="addBook">Add New Book</button>
 </body>
 <script src="app.js"></script>
 </html>
