reformatting using html css to separate books from addBook

--- a/index.html
+++ b/index.html
@@ -8,28 +8,34 @@
   <title>Library App</title>
 </head>
 <body>
-  <h1>Library</h1>
-  <div class="books">
+  <div class="container">
+    <div class="left">
+      <h1>Library</h1>
+      <form action="" class="form">
+        <div>
+          <label for="title">Title:</label>
+          <input type="text">
+        </div>
+        <div>
+          <label for="author">Author:</label>
+          <input type="text">
+        </div>
+        <div>
+          <label for="pages">Pages:</label>
+          <input type="text">
+        </div>
+        <div>
+          <label for="read">Read/Not Read:</label>
+          <input type="text">
+        </div>
+      </form>
+      <button class="addBook">Add New Book</button>
+    </div>
+    <div class="bookshelf">
+      <div class="books">
+      </div>
+    </div>
   </div>
-  <form action="" class="form">
-    <div>
-      <label for="title">Title:</label>
-      <input type="text">
-    </div>
-    <div>
-      <label for="author">Author:</label>
-      <input type="text">
-    </div>
-    <div>
-      <label for="pages">Pages:</label>
-      <input type="text">
-    </div>
-    <div>
-      <label for="read">Read/Not Read:</label>
-      <input type="text">
-    </div>
-  </form>
-  <button class="addBook">Add New Book</button>
 </body>
 <script src="app.js"></script>
 </html>
