formatting cards/books with css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
   <div class="container">
     <div class="left">
-      <h1>Library</h1>
+      <div class="form-heading">
+        <h1>Library</h1>
+      </div>
       <form action="" class="form">
         <div>
           <label for="title">Title:</label>
@@ -31,8 +33,13 @@
       </form>
       <button class="addBook">Add New Book</button>
     </div>
-    <div class="bookshelf">
-      <div class="books">
+    <div class="right">
+      <div class="form-heading">
+        <h1>Bookshelf</h1>
+      </div>
+      <div class="bookshelf">
+        <div class="books">
+        </div>
       </div>
     </div>
   </div>
