--- a/index.html
+++ b/index.html
@@ -13,25 +13,22 @@
       <div class="form-heading">
         <h1>Library</h1>
       </div>
-      <form action="" class="form">
-        <div>
-          <label for="title">Title:</label>
-          <input type="text">
+      <div class="form">
+        <div class="add-book-form" style="display:none">
+          <form id="add-book">
+              <label for="title">Title:</label>
+              <input type="text" id="Title" name="Title">
+              <label for="author">Author:</label>
+              <input type="text" id="Author" name="Author">
+              <label for="pages">Pages:</label>
+              <input type="text" id="Pages" name="Pages">
+              <label for="read">Read/Not Read:</label>
+              <input type="text" id="Read" name="Read">
+          </form>
         </div>
-        <div>
-          <label for="author">Author:</label>
-          <input type="text">
-        </div>
-        <div>
-          <label for="pages">Pages:</label>
-          <input type="text">
-        </div>
-        <div>
-          <label for="read">Read/Not Read:</label>
-          <input type="text">
-        </div>
-      </form>
-      <button class="addBook">Add New Book</button>
+        <button type="submit" class="submit-button">Add New Book</button>
+        <button type="reset" class="reset-button">Reset Form</button>
+      </div>
     </div>
     <div class="right">
       <div class="form-heading">
