--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <h1>Library</h1>
       </div>
       <div class="form">
+        <button class="add-book-button">Add New Book</button>
+        
         <div class="add-book-form" style="display:none">
           <form id="add-book">
               <label for="title">Title:</label>
@@ -25,9 +27,9 @@
               <label for="read">Read/Not Read:</label>
               <input type="text" id="Read" name="Read">
           </form>
+          <button type="submit" class="submit-button">Submit To Library</button>
+          <button type="reset" class="reset-button">Reset Form</button>
         </div>
-        <button type="submit" class="submit-button">Add New Book</button>
-        <button type="reset" class="reset-button">Reset Form</button>
       </div>
     </div>
     <div class="right">
