--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       </div>
       <div class="form">
         <button class="add-book-button">Add New Book</button>
-        
-        <div class="add-book-form" style="display:none">
+        <div id="add-book-form" style="display:none">
           <form id="add-book">
               <label for="title">Title:</label>
               <input type="text" id="Title" name="Title">
