added select option to form for initial read/not read status

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
               <label for="pages">Pages:</label>
               <input type="text" id="Pages" name="Pages">
               <label for="read">Read/Not Read:</label>
-              <input type="text" id="Read" name="Read">
+              <select name="Read" id="Read">
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+              </select>
           </form>
           <button type="submit" class="submit-button">Submit To Library</button>
           <button type="reset" class="reset-button">Reset Form</button>
